1.0.0
Minor menu gui fix.
Fixed segfault with certain windows like xephyr.
Version bump.

0.2.6
Fixed restacking.
Code clean.
Fixed control position/sizes when changing themes on the fly.
Fixed segfault when switching resize modes.
Added "reloadtheme" to messaging.
Fixed positioning of wm menu popup.
Can now set resize mode for individual windows via wm menu.
Done window menu.
Done window controls rollover/pressed.
Started window manager menu.
Theming done ( mostly ).
Fixed drag resizeing glitches.
Added install default prefs file on 1st run if not exists, ( ~/.config/LFS/lfswm2.rc ).
Fixed memory leak.
Fixed various gui glitches.
Fixed dragsize from widget.
Code clean.
Started theming.
0.2.5
Fixed resize flicker.
Fixed memory leaks.
Added more cli options.
Resize window tweaks.
Fixed title position.
Fixd about boxes being reshown.
Fixed moving windows when starting up.
Fixed menus AGAIN!
Done no placement.
Done open on center screen.
Done open window under mouse.
GUI tweaks.
Fixed cli options v/h/?.
Done centre window on monitor option.
Added default window placement to cli options.
Fixed memory leaks.

0.2.4
Moved bottom leftright draggers to top.
Done shade window.
Done windows with no controls?
Removed Xcomposite library.
Fixed not focusing in xterm.
Smoothed out resizing windows.
Added Xcomposite library.
Done focusing windows when switching desks.
Done position window title left/centre/right.
Added -p/--titleposition to command line options.
Done center window title vertically.
Changed rect to use same structure as lfslib.
Added -F/--font to command line options.

0.2.3
Fixed widget drag eesize.
Fixed window placing.
Fixed transient windows closing.
Fixed exiting.
Moved more events to client class.
Code clean.
Fixed frame position when framing.
Code clean.
Fixed min/max/below/above/alldesks AGAIN!
Sped up window drag move.
Fixed to flicker when changing desktops.
Fixed spurious desktop changes.
Fixed fullscreen window by 3rd party.